--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5433/shop
 # Hibernate
 spring.jpa.hibernate.ddl-auto=create
+
+product.order-job.core-pool-size=4
