feature/006 - update README.md and application.properties files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=GOODS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/shop
+spring.datasource.url=jdbc:postgresql://localhost:5431/shop
 # Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
+# Application configs
 product.order-job.core-pool-size=4
-
 product.order.delete-after-creation=10
